# raytracer

./: .gitignore  CMakeLists.txt  shell.nix
includes/geometry/: ray.hpp  vector.hpp
includes/materials/: lambertian.hpp  material.hpp  metal.hpp
includes/objects/: hittable.hpp  sphere.hpp  world.hpp
includes/utils/: camera.hpp  color.hpp  constants.hpp  interval.hpp  point.hpp
src/: main.cpp
src/geometry/: ray.cpp  vector.cpp
src/materials/: lambertian.cpp  metal.cpp
src/objects/: sphere.cpp  world.cpp
src/utils/: camera.cpp  color.cpp  interval.cpp  point.cpp
